force-app/main/default/objects/vlocity_ins__CalculationMatrixColumn__c/vlocity_ins__CalculationMatrixColumn__c.object-meta.xml
<CustomObject>
    <label>Vlocity Calculation Matrix Column</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Vlocity Calculation Matrix Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Calculation Matrix Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>