force-app/main/default/objects/vlocity_ins__CalculationMatrixColumn__c/fields/vlocity_ins__GlobalKey__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__GlobalKey__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Global Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>